--- a/lambda/requirements.txt
+++ b/lambda/requirements.txt
@@ -1,4 +1,5 @@
 -i https://pypi.org/simple
 slack-bolt==1.19.0; python_version >= '3.6'
-boto3==1.34.123; python_version >= '3.8'
-botocore==1.34.123; python_version >= '3.8'
+boto3==1.35.87; python_version >= '3.8'
+botocore==1.35.87; python_version >= '3.8'
+requests==2.31.0; python_version >= '3.7'
